--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "tamagotchi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "tamagotchi",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "parcel src/index.html",
+		"format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
+		"format:check": "prettier --ignore-path ./.gitignore --check \"./**/*.{html,json,js,ts,css}\"",
+		"lint": "eslint --ignore-path ./.gitignore --fix \"./**/*.{js,ts}\"",
+		"lint:check": "eslint --ignore-path ./.gitignore --quiet \"./**/*.{js,ts}\"",
+		"test": "jest"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"eslint": "^7.31.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
+		"jest": "^27.0.6",
+		"parcel-bundler": "^1.12.5",
+		"prettier": "^2.3.2"
+	}
 }
